--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ There are 2 requests sent while joining a guild for some reason</p>
 </ul>
 <h1 id="uncategorized-idk-what-are-these-help-me-out-if-you-can">Uncategorized (idk what are these, help me out if you can)</h1>
 <p><code>42["j","player"]</code> =&gt; join pp or painting?<br>
-<code>42["l","SimbuxMapper"]</code> =&gt; leave pp or painting???<br>
+<code>42["l","player"]</code> =&gt; leave pp or painting???<br>
 <code>42["chat.stats",[x,y]]</code><br>
 <code>3</code> =&gt; second “stay alive” packet?</p>
 
