--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome file(2).html</title>
+  <title>Pixelplace requests</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
