categorised 2 uncategorised but they are categorised so they are not uncategorised anymore

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pixelplace requests</title>
+  <title>Pixelplace request.html</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
@@ -32,6 +32,7 @@
 <li><a href="#requests-from-server">Requests from server</a>
 <ul>
 <li><a href="#chat-message">Chat message</a></li>
+<li><a href="#join-or-leave-pixelplace">Join OR Leave Pixelplace</a></li>
 </ul>
 </li>
 <li><a href="#uncategorized-idk-what-are-these-help-me-out-if-you-can">Uncategorized (idk what are these, help me out if you can)</a></li>
@@ -126,10 +127,11 @@ There are 2 requests sent while joining a guild for some reason</p>
 <li>posY =&gt; /here</li>
 <li>posS =&gt; Amount of zoom (you can see it in the URL)</li>
 </ul>
+<h2 id="join-or-leave-pixelplace">Join OR Leave Pixelplace</h2>
+<p><code>42["j","player"]</code> =&gt; When a <code>player</code> joins Pixelplace<br>
+<code>42["l","player"]</code> =&gt;  When a <code>player</code> leaves Pixelplace</p>
 <h1 id="uncategorized-idk-what-are-these-help-me-out-if-you-can">Uncategorized (idk what are these, help me out if you can)</h1>
-<p><code>42["j","player"]</code> =&gt; join pp or painting?<br>
-<code>42["l","player"]</code> =&gt; leave pp or painting???<br>
-<code>42["chat.stats",[x,y]]</code><br>
+<p><code>42["chat.stats",[x,y]]</code><br>
 <code>3</code> =&gt; second “stay alive” packet?</p>
 
     </div>
